Fix AIX build after the removal of Xrandr.h and add a configure check for it

XMLWordPrintable

    • 12
    • b22

        Change JDK-8210863 removed the Xrandr.h/randr.h headers from the OpenJDK sources but forgot to add a configure check for the Xrandr extension which is now a build dependency.

        The change also broke the AIX build. AIX never supported Xrandr, but that was only detected at runtime, when the JDK was unable to dynamically load libXrand.so. Now, without Xrandr.h/randr.h in the source tree any more, we have to conditionally compile src/java.desktop/unix/native/libawt_xawt/awt/awt_GraphicsEnv.c such that it doesn't require the definitions and declarations from Xrandr.h/randr.h any more.

              Assignee:
              Volker Simonis
              Reporter:
              Volker Simonis
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: