8213944: Fix AIX build after the removal of Xrandr.h and add a configure check for it

Reviewed-by: shade, erikj, stuefe, ihse, goetz