src/java.desktop/unix/native/libawt_xawt/awt/awt_GraphicsEnv.c
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1997, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997, 2018, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -34,7 +34,9 @@
 #ifndef HEADLESS
 #include <X11/extensions/Xdbe.h>
 #include <X11/XKBlib.h>
+#ifndef _AIX
 #include <X11/extensions/Xrandr.h>
+#endif
 #include "GLXGraphicsConfig.h"
 #endif /* !HEADLESS */
 
@@ -1625,6 +1627,8 @@ Java_sun_awt_X11GraphicsEnvironment_getXineramaCenterPoint(JNIEnv *env,
 
 #ifndef HEADLESS
 
+#ifndef _AIX
+
 #define BIT_DEPTH_MULTI java_awt_DisplayMode_BIT_DEPTH_MULTI
 #define REFRESH_RATE_UNKNOWN java_awt_DisplayMode_REFRESH_RATE_UNKNOWN
 
@@ -1830,6 +1834,8 @@ X11GD_AddDisplayMode(JNIEnv *env, jobject arrayList,
     }
 }
 
+#endif /* !_AIX */
+
 static void
 X11GD_SetFullscreenMode(Window win, jboolean enabled)
 {
@@ -1869,7 +1875,7 @@ JNIEXPORT jboolean JNICALL
 Java_sun_awt_X11GraphicsDevice_initXrandrExtension
     (JNIEnv *env, jclass x11gd)
 {
-#ifdef HEADLESS
+#if defined(HEADLESS) || defined(_AIX)
     return JNI_FALSE;
 #else
     int opcode = 0, firstEvent = 0, firstError = 0;
@@ -1896,7 +1902,7 @@ JNIEXPORT jobject JNICALL
 Java_sun_awt_X11GraphicsDevice_getCurrentDisplayMode
     (JNIEnv* env, jclass x11gd, jint screen)
 {
-#ifdef HEADLESS
+#if defined(HEADLESS) || defined(_AIX)
     return NULL;
 #else
     XRRScreenConfiguration *config;
@@ -1992,7 +1998,7 @@ Java_sun_awt_X11GraphicsDevice_enumDisplayModes
     (JNIEnv* env, jclass x11gd,
      jint screen, jobject arrayList)
 {
-#ifndef HEADLESS
+#if !defined(HEADLESS) && !defined(_AIX)
 
     AWT_LOCK();
 
@@ -2080,7 +2086,7 @@ Java_sun_awt_X11GraphicsDevice_configDisplayMode
     (JNIEnv* env, jclass x11gd,
      jint screen, jint width, jint height, jint refreshRate)
 {
-#ifndef HEADLESS
+#if !defined(HEADLESS) && !defined(_AIX)
     jboolean success = JNI_FALSE;
     XRRScreenConfiguration *config;
     Drawable root;
@@ -2197,6 +2203,9 @@ Java_sun_awt_X11GraphicsDevice_exitFullScreenExclusive
  */
 
 static char *get_output_screen_name(JNIEnv *env, int screen) {
+#ifdef _AIX
+    return NULL;
+#else
     if (!awt_XRRGetScreenResources || !awt_XRRGetOutputInfo) {
         return NULL;
     }
@@ -2226,6 +2235,7 @@ static char *get_output_screen_name(JNIEnv *env, int screen) {
     }
     AWT_UNLOCK();
     return name;
+#endif /* _AIX */
 }
 
 /*
